--- a/love/index.html
+++ b/love/index.html
@@ -6,7 +6,7 @@ content="IE=11.0000" http-equiv="X-UA-Compatible">
 <meta name="description" content="5" />
 <body ondragstart="window.event.returnValue=false" oncontextmenu="window.event.returnValue=false" onselectstart="event.returnValue=false">
 <META http-equiv="Content-Type" content="text/html; charset=utf-8">
-		 <TITLE>小伟博客-表白源码1  </TITLE>	             <LINK href="xiaoweigod.com/default.css" 
+		 <TITLE>love  </TITLE>	             <LINK href="xiaoweigod.com/default.css" 
 rel="stylesheet" type="text/css">		 
 <SCRIPT src="xiaoweigod.com/jquery.min.js" type="text/javascript"></SCRIPT>
 		 
@@ -186,7 +186,7 @@ id="canvas"></CANVAS>             </DIV></DIV>
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2017,05 ,01); 			//时间年月日
+		    together.setFullYear(2019,23 ,01); 			//时间年月日
 		    together.setHours(00);						//小时	
 		    together.setMinutes(00);					//分钟
 		    together.setSeconds(0);					//秒前一位
