--- a/love/index.html
+++ b/love/index.html
@@ -186,7 +186,7 @@ id="canvas"></CANVAS>             </DIV></DIV>
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2019,23 ,01); 			//时间年月日
+		    together.setFullYear(2019,01,23); 			//时间年月日
 		    together.setHours(00);						//小时	
 		    together.setMinutes(00);					//分钟
 		    together.setSeconds(0);					//秒前一位
