--- a/love/index.html
+++ b/love/index.html
@@ -184,7 +184,7 @@ id="canvas"></CANVAS>             </DIV></DIV>
             }
         }));
 
-        var textAnimate = eval(Jscex.compile("sync", function () {
+        var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
 		    together.setFullYear(2019,01,23); 			//时间年月日
 		    together.setHours(00);						//小时	
