--- a/love/index.html
+++ b/love/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>唯美爱情表白----子成君</title>
+<title>love you</title>
 <link type="text/css" rel="stylesheet" href="renxi/default.css">
 <link rel="icon" href="favicon.ico" />
 <script type="text/javascript" src="renxi/jquery.min.js"></script>
@@ -29,7 +29,7 @@
   <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。by子成君</div>
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，我爱你，虽然你看不见我对你的告白</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say">迪迪，我爱你</span><br>
         <span class="say"> </span><br>
         <span class="say"> 我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
         <span class="say"> </span><br>
@@ -38,11 +38,11 @@
         <span class="say">因为我太啰嗦了，所以你离开了我</span><br>
         <span class="say">虽然你看不见我的告白，但是我还是要把这些心里话说出来</span><br>
         <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 爱你的子成--</span> </font>
+        <span class="say"><span class="space"></span> -- 爱你--</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的宝宝，我喜欢你</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#33CC00">亲爱的宝宝，我们在一起</font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680" onclick="playAudio()" ></canvas>
