--- a/love/index.html
+++ b/love/index.html
@@ -26,7 +26,7 @@
 <source src="./66.mp3" type="audio/mpeg">
 </audio>
 <div id="main">
-  <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。by子成君</div>
+  <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。</div>
   <div id="wrap">
     <div id="text">
       <div id="code"> <font color="#FF0000"> <span class="say">迪迪，我爱你</span><br>
