--- a/love/index.html
+++ b/love/index.html
@@ -29,23 +29,23 @@
   <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(Chrome)或者火狐(Firefox)浏览器，或者其他游览器的最新版本。by子成君</div>
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">迪迪，茫茫人海中与你相遇，是一种幸运</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say"></span><br>
         <span class="say"> </span><br>
-        <span class="say"> 坦白说，我不会什么甜言蜜语，也不会制造什么浪漫惊喜</span><br>
         <span class="say"> </span><br>
-        <span class="say">但是爱你的那颗心永远在这里</span><br>
         <span class="say"> </span><br>
-        <span class="say">两个人相识、相知、相爱、相依，不离不弃，最好的爱情莫过于此</span><br>        
+        <span class="say"></span><br>
         <span class="say"> </span><br>
-        <span class="say">愿有岁月可回首，愿以深情共白头</span><br>
+        <span class="say"></span><br>        
         <span class="say"> </span><br>
-        <span class="say">余生，有你，足矣</span><br>
+        <span class="say"></span><br>
+        <span class="say"> </span><br>
+        <span class="say"></span><br>
         <span class="say"> </span><br>
         <span class="say"><span class="space"></span> -- 爱你--</span> </font>
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="purple">小可爱，我们在一起</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="purple">我们在一起</font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680" onclick="playAudio()" ></canvas>
@@ -194,7 +194,7 @@
 
      var textAnimate = eval(Jscex.compile("async", function () {
             var together = new Date();
-             var strs = "2019-01-23 23:15:00";
+             var strs = "2019-10-29 23:45:00";
               var nowTime=new Date();
               var together = new Date(strs.replace(/-/g,"/"));  
 
