--- a/love/index.html
+++ b/love/index.html
@@ -45,7 +45,7 @@
         </p>
       </div>
     </div>
-    <div id="clock-box"> <span class="STYLE1"></span><font color="purple">我们在一起</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="purple">王攀 & 刘楠 在一起</font> <span class="STYLE1">已经是……</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680" onclick="playAudio()" ></canvas>
