--- a/love/index.html
+++ b/love/index.html
@@ -33,7 +33,7 @@
         <span class="say">-- 刘楠小可爱 --</span><br>
         <span class="say"></span><br>
 	<span class="say"></span><br> 
-	<span class="say">    在二十一世纪十年代的最后一个冬天，我牵手了你；</span><br>
+	<span class="say"><span class="space"></span>    在二十一世纪十年代的最后一个冬天，我牵手了你；</span><br>
         <span class="say"></span><br>
 	<span class="say">    我清楚地知道，你就是我的理想型，</span><br>
         <span class="say">    我的世界仅你一家，再无分号；</span><br>
@@ -49,7 +49,7 @@
 	<span class="say">    你永远是我的小公主、小可爱</span><br>
         <span class="say"></span><br>
         <span class="say"> </span><br>
-        <span class="say"><span class="space"></span> -- 狗子爱你--</span> </font>
+        <span class="say"><span class="space"></span> -- 狗子爱你 --</span> </font>
         </p>
       </div>
     </div>
