--- a/love/index.html
+++ b/love/index.html
@@ -33,10 +33,10 @@
         <span class="say">-- 刘楠小可爱 --</span><br>
         <span class="say"></span><br>
 	<span class="say"></span><br> 
-	<span class="say">&nbsp;&nbsp;在二十一世纪十年代的最后一个冬天，我牵手了你；</span><br>
+	<span class="say">&ensp;在二十一世纪十年代的最后一个冬天，我牵手了你；</span><br>
         <span class="say"></span><br>
 	<span class="say">&nbsp;我清楚地知道，你就是我的理想型，</span><br>
-        <span class="say">    我的世界仅你一家，再无分号；</span><br>
+        <span class="say"> &ensp;&ensp;  我的世界仅你一家，再无分号；</span><br>
 	<span class="say"></span><br>
 	<span class="say">    在已经过去以及即将到来的日子里，</span><br>
         <span class="say">    我只会宠你、爱你、照顾你、呵护你，</span><br>
