--- a/love/index.html
+++ b/love/index.html
@@ -33,19 +33,19 @@
         <span class="say">-- 刘楠小可爱 --</span><br>
         <span class="say"></span><br>
 	<span class="say"></span><br> 
-	<span class="say">&ensp;在二十一世纪十年代的最后一个冬天，我牵手了你；</span><br>
+	<span class="say">&emsp;在二十一世纪十年代的最后一个冬天，我牵手了你；</span><br>
         <span class="say"></span><br>
-	<span class="say">&nbsp;我清楚地知道，你就是我的理想型，</span><br>
-        <span class="say"> &ensp;&ensp;  我的世界仅你一家，再无分号；</span><br>
+	<span class="say">&emsp;我清楚地知道，你就是我的理想型，</span><br>
+        <span class="say">&ensp;  我的世界仅你一家，再无分号；</span><br>
 	<span class="say"></span><br>
-	<span class="say">    在已经过去以及即将到来的日子里，</span><br>
-        <span class="say">    我只会宠你、爱你、照顾你、呵护你，</span><br>
-	<span class="say">    绝不会欺负你、伤害你；</span><br>
+	<span class="say">&emsp;    在已经过去以及即将到来的日子里，</span><br>
+        <span class="say">&emsp;    我只会宠你、爱你、照顾你、呵护你，</span><br>
+	<span class="say">&emsp;    绝不会欺负你、伤害你；</span><br>
 	<span class="say"></span><br>
-	<span class="say">    家务活我来做，碗我来刷，购物车我来清空，</span><br>
-        <span class="say">    我负责赚钱养家，你负责貌美如花；</span><br>        
+	<span class="say">&emsp;    家务活我来做，碗我来刷，购物车我来清空，</span><br>
+        <span class="say">&emsp;    我负责赚钱养家，你负责貌美如花；</span><br>        
         <span class="say"></span><br>
-	<span class="say">    你永远是我的小公主、小可爱</span><br>
+	<span class="say">&emsp;    你永远是我的小公主、小可爱</span><br>
         <span class="say"></span><br>
         <span class="say"> </span><br>
         <span class="say"><span class="space"></span> -- 狗子爱你 --</span> </font>
