--- a/love/index.html
+++ b/love/index.html
@@ -42,7 +42,7 @@
         <span class="say">&emsp;    我只会宠你、爱你、照顾你、呵护你，</span><br>
 	<span class="say">&emsp;    绝不会欺负你、伤害你；</span><br>
 	<span class="say"></span><br>
-	<span class="say">&emsp;    家务活我来做，碗我来洗，购物车我来清空，</span><br>
+	<span class="say">&emsp;    家务活我来做，水果我来剥，购物车我来清空，</span><br>
         <span class="say">&emsp;    我负责赚钱养家，你负责貌美如花；</span><br>        
         <span class="say"></span><br>
 	<span class="say">&emsp;    你永远是我的小公主、小可爱</span><br>
